# gssquared

./: .gitignore  .gitmodules  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  index.html  mkdocs.yml
65816/: index.html
ADB/: index.html
AppCallbacks/: index.html
AppleIII/: index.html
AppleIIc/: index.html
AppleIIe/: index.html
AppleIIgs/: index.html
AppleIIgs-Memory/: index.html
AppleIIgsDiagnostics/: index.html
AppleMemoryExpansionCard/: index.html
AppleMouse/: index.html
C800-CFFF/: index.html
CPURefactor/: index.html
CPUs/: index.html
Clipboard/: index.html
Clock/: index.html
Compatibility/: index.html
CompatibilityGS/: index.html
ConfigEditor/: index.html
ConfigFiles/: index.html
ControlOverlay/: index.html
Debugger/: index.html
DevelopLog/: index.html
DiskII/: index.html
DisplayNG/: index.html
DisplayPP/: index.html
Displays/: index.html
Docs/: 65816.md  ADB-Classes.cpp  ADB.md  Agent.md  AppCallbacks.md  AppleIIc.md  AppleIIe.md  AppleIIgs-Memory.md  AppleIIgs.md  AppleIIgsDiagnostics.md  AppleMouse.md  CPUs.md  Clock.md  Compatibility.md  CompatibilityGS.md  ConfigEditor.md  ConfigFiles.md  DebugClient.md  DebugProtocol.md  DebugProtocolVsDAP.md  Debugger.md  DevelopLog.md  DiskII.md  Displays.md  Documentation.md  Emscripten.md  Ensoniq5503.md  ExternalDebugInterface.md  GS2_ChangeLog_0.9.md  GSClockBatteryRAM.md  IWM.md  Index.md  Joyport.md  Joysticks.md  KeyboardShortcuts.md  MCP.md  MIDI.md  MemoryProtection.md  Menus.md  Mockingboard.md  (+26 more)
Documentation/: index.html
DoubleHiRes/: index.html
Emscripten/: index.html
Ensoniq5503/: index.html
EpsonMX80/: index.html
ExternalDebugInterface/: index.html
GS2_ChangeLog_0.9/: index.html
GSClockBatteryRAM/: index.html
HiRes/: index.html
IWM/: index.html
Imagewriter/: index.html
Joyport/: index.html
Joysticks/: index.html
KeyboardShortcuts/: index.html
MIDI/: index.html
MMU/: index.html
MemoryProtection/: index.html
Menus/: index.html
Mockingboard/: index.html
MockingboardBugAnalysis/: index.html
Mouse/: index.html
NeilA235Floppy/: index.html
Networking/: index.html
OSD/: index.html
PAL/: index.html
PPU/: index.html
Parallel/: index.html
PowerOnStates/: index.html
ProDOS_Block/: index.html
RPMS/: gssquared.src.rpm
RPMS/SOURCES/: gssquared-CMakeLists.patch  gssquared.tgz
RPMS/SPECS/: gssquared.spec
ReleaseNotes-v0.8.0/: index.html
Roadmap/: index.html
SCC8530_Serial/: index.html
SaveAndRestore/: index.html
SecondSight/: index.html
Select/: index.html
Serial_Modem/: index.html
SmartPort/: index.html
StateRefactor/: index.html
Storage/: index.html
SystemConfigTOML/: index.html
Thunderclock/: index.html
Tracing/: index.html
UI/: index.html
UserInterface/: index.html
VideoScanner/: index.html
VideoTerm/: index.html
WDM/: index.html
Woz/: index.html
XRGB/: index.html
apps/adbtest/: CMakeLists.txt  main.cpp  menu.h  menu.mm  realmain.cpp
apps/binprint/: CMakeLists.txt  binprint.c
apps/cpu816test/: CMakeLists.txt  main.cpp
apps/cputest/: CMakeLists.txt  main.cpp
apps/cycletest/: CMakeLists.txt  main.cpp
apps/denibblizer/: main.cpp
apps/diskid/: CMakeLists.txt  main.cpp
apps/doc/: CMakeLists.txt  main.cpp
apps/dpp/: CMakeLists.txt  main.cpp
apps/gstrace/: CMakeLists.txt  main.cpp
apps/iigsmmutest/: AsmFile.hpp  CMakeLists.txt  main.cpp  tests.hpp
apps/mmutest/: main.cpp
apps/montest/: main.cpp
apps/mousebugtest/: CMakeLists.txt  main.cpp
apps/nibblizer/: main.cpp
apps/rtctest/: CMakeLists.txt  main.cpp
apps/speaker/: CMakeLists.txt  SpeakerFP.hpp  SpeakerFX.hpp  allsdl.cpp  main.cpp  newspeakfp.cpp  newspeakfx.cpp
apps/ssppu/: CMakeLists.txt  chr2tiles.cpp  main.cpp  mario.tiles
apps/systemconfigtest/: CMakeLists.txt  main.cpp
apps/test_6502/: main.cpp
apps/ui/: CMakeLists.txt  main.cpp
apps/vgatext/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp
apps/vpp/: CMakeLists.txt  main.cpp
apps/wozutil/: CMakeLists.txt  main.cpp
assets/: Info.plist.in
assets/gs2/: DualMockingboard.gs2  IIe_65816.gs2  IIe_AppleMouseIII.gs2  IIe_PAL.gs2  IIgs_DiskII.gs2
assets/img/: GS2TextureAtlas.xcf
assets/shaders/: crt.frag.hlsl  crt.frag.metal  crt.frag.metal.orig
assets/vdisk/: drivers.hdv
assets/web/: serve.py  shell.html
clients/python/: README.md  pyproject.toml
clients/python/examples/: debug_a2osx_diskii.py  debug_kernkompetenz.py  debug_senseiplay_ensoniq.py  debug_senseiplay_esc.py  hello_ping.py  read_text40.py  read_text40_iigs.py  read_text40_megaii.py  test_applemouseiii_in4.py  test_breakpoints.py  test_ensoniq_debug.py  type_basic_iie.py  type_to_emu.py  watch_c010_iie.py  watch_data_iigs.py  write_text40.py  write_text40_iigs.py
clients/python/src/gs2debug/: __init__.py  client.py  errors.py  frame.py  keys.py  types.py
clients/python/tests/: test_frame.py
runloop/: index.html
search/: search_index.json
src/: Device_ID.hpp  Module_ID.hpp  NClock.hpp  PlatformIDs.hpp  build_config.hpp.in  clock.hpp  computer.cpp  computer.hpp  cpu.cpp  cpu.hpp  debug.cpp  debug.hpp  device_info.cpp  device_info.hpp  device_irq_id.hpp  device_reset_id.hpp  devices.cpp  devices.hpp  event_poll.cpp  event_poll.hpp  gs2.cpp  gs2.hpp  memoryspecs.hpp  opcodes.cpp  opcodes.hpp  paths.cpp  paths.hpp  platforms.cpp  platforms.hpp  slots.cpp  systemconfig.cpp  systemconfig.hpp  videosystem.cpp  videosystem.hpp
src/agent/: Agent.cpp  Agent.hpp  EventQueue.cpp  EventQueue.hpp  Protocol.cpp  Protocol.hpp  UnixSocketTransport.cpp  UnixSocketTransport.hpp
src/cpus/: README.md  base_6502.cpp  core_6502.cpp  core_6502.hpp  cpu_6502.cpp  cpu_65816.cpp  cpu_65c02.cpp  cpu_implementations.cpp  cpu_implementations.hpp  cpu_traits.hpp  cpu_usage_example.cpp  processor_type.hpp
src/debugger/: BreakpointTable.cpp  BreakpointTable.hpp  (+19 more)
tools/: agent_capture.sh  decode_agent_stream.py  iigs_tool_args.py  iigs_tools.tsv  mcp_launch.sh  mcp_smoke.py  mcp_test.py
utils/: binprint  char-rom-print.c  videx-char-rom.c
(+376 files in other folders)
